# nciutils

./: pyproject.toml
examples/: inversion.strip  read_rol_output.py
nciutil/: __init__.py  rol.py
