[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "nciutil"
version = "0.1.0"
description = "A collection of utilities for processing NCI data"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
license = { text = "MIT" }
dependencies = [
    "numpy",
    "scipy"
]

[tool.setuptools]
packages = ["nciutil"]

[project.optional-dependencies]
dev = ["pytest", "black", "flake8"]

[project.scripts]
nciutil-cli = "nciutil.cli:main"